[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langsmith>=0.8.0",
    "protobuf<=3.20.3",
    "pypdf>=6.10.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "tavily-python>=0.7.24",
    "torchvision>=0.26.0",
]
